# gallery

./: .gitmodules  README.md
01_cfd_unstructured_mesh/lib/: Cell2Verts.m  PhysicalSettings.m  reconstruct.m  reconstructOperator.m
01_cfd_unstructured_mesh/numeric/: main.m  pcg_solve.m  pre_ssor_ai.m
01_cfd_unstructured_mesh/solver/: icoSolver.m
01_cfd_unstructured_mesh/validation/: lid-driven_re_1000.mat
02_cuda_practices/fluidsGL/: .cproject  fluidsGL_kernels.cu  fluidsGL_kernels.cuh  readme.txt
02_cuda_practices/nbody/: Makefile  bodysystem.h  bodysystemcuda_impl.h  nbody.cpp  readme.txt
03_BoomerAMG_solver_in_openfoam/: BoomerAMG.C  Hypre_helper.H
04_particle_segregation_sims/: readme.md
05_lattice_boltzmann_sims/: README.md
05_lattice_boltzmann_sims/test/: CMakeLists.txt  macro_expansion.cpp
05_lattice_boltzmann_sims/test/IO/: write_binary.cpp
05_lattice_boltzmann_sims/test/computeShader/: CMakeLists.txt
07_atmosphere_scattering/: ClampCosine.m  ClampRadius.m  ConvertSpectrumToRadianceFactor.m  DistanceToNearestAtmosphereBoundary.m  Earth.json  Earth_tr.hdr  GetTransmittance.m  GetTransmittanceToSun.m  IntersectRaySphere.m  PreCompute.m  RMuMusNuEncoding.m  RadianAngleBetweenTwoVectors.m  debug_encoding.m  getCrossSectionTypicalGases.m  scattering1.mlx  scattering2.mlx  scattering4.mlx  smoothstep.m
08_rans_model_in_basilisk/: .gitignore  README.md
11_hyperbolic_eqn/: AUSM_SOLVER1D.m  AUSM_SOLVER2D.m  ImmersedBoundary2D.m  Rusanov_flux_demo.mlx  WENO3.m  WENO5.m  acoustic.m  case2d_explosion.m  euler2d_tvd.m  euler_tvd.m  hll_solver2d.m  inviscid_euler.m  inviscid_euler2d.m  inviscid_euler2d_MUSCL.m  invisid_burger.m  rhll_solver2d.m  riemann_problem.mlx  riemann_solver.m  riemann_solver_md.m  roe_solver.m  roe_solver2d.m  tsdEquilateralTriangle.m
BoomerAMG/: BoomerAMG.H  README  README.md
atmosphere_scattering/: ClampDistance.m  ClampNu.m  ComputeOpticalLengthToTopAtmosphereBoundary.m  ComputeSingleScattering.m  ComputeTransmittanceToTopAtmosphereBoundary.m  DistanceToBottomAtmosphereBoundary.m  DistanceToTopAtmosphereBoundary.m  GetSunDisk.m  GetTransmittanceToTopAtmosphereBoundary.m  IntersectRayAtmosphere.m  Lambda2RGB.m  MiePhaseFunction.m  PreComputeFullSpectrum.m  RMuDecoding.m  RMuEncoding.m  RMuMusNuDecoding.m  RayIntersectsGround.m  RayleighPhaseFunction.m  SafeSqrt.m  astmg173.xls  opticalRayCastDemo.mlx  scattering3.mlx  scattering3lux.mlx
cfd_unstructured_mesh/: postProcess.m
cuda/: readme.md
cuda/lattice_boltzmann/: CMakeLists.txt  Makefile  camera.cpp  camera.h  fragment.init.shader  fragment.mrt.shader  fragment.shader  main.cpp  offscreen.cpp  readme.txt  shader.cpp  shader.h  vertex.mrt.shader
cuda/lattice_boltzmann/includes/tsm/: tsm.h
cuda/lattice_boltzmann/lib/: libGLEW.so.2.1.0  libassimp.so.4
cuda/lattice_boltzmann/matlab_codes/: channel_flow.m
cuda/lattice_boltzmann/matlab_codes/3d/: cavity.m  channel.m  lambda2.m
cuda/lattice_boltzmann/matlab_codes/validation/: couette_parabolic.m  d2q9.ptx  u_verticalline.mat  v_horizontalline.mat
cuda/lattice_boltzmann/matlab_codes/validation2/: bodyforce_pgrad_balance.m  d2q9.cu
cuda/lattice_boltzmann/modules/: FindGLEW.cmake
lattice_boltzmann/: CMakeLists.txt  README.md
lattice_boltzmann/core/2d/: CMakeLists.txt  fluid2d.solve.glsl  fluid2dcompute.frag  fluid2dinit.frag  lbm2dgpu.cpp  lbm2dgpu.h  main.cpp  param2d.h  postprocess.frag
lattice_boltzmann/core/2d_tex/: CMakeLists.txt  lbm2dgpu.cpp  lbm2dgpu.h  postprocess.frag
lattice_boltzmann/core/3d/: CMakeLists.txt  fluid3d.init.glsl  fluid3d.solve.glsl  lbm3dgpu.cpp  lbm3dgpu.h  main.cpp  param3d.h
lattice_boltzmann/core/3d_surf/: fluid3d.solve.glsl  lbm3dgpu.cpp  lbm3dgpu.h  param3d.h
lattice_boltzmann/core/immersed2d/: CMakeLists.txt  fluid2d.init.glsl  fluid2d.solve.glsl
lattice_boltzmann/matlab_codes/: d2q9.cu  d2q9.ptx
lattice_boltzmann/matlab_codes/3d/: d3q27.ptx
lattice_boltzmann/matlab_codes/hier/: Copy_of_hier_green_vort.m  build_hier.m  draw_hier.m  draw_hier_grid.m  hier_green_vort.m  init_equilibrium.m  integrator.m  readme.md  wake.m
lattice_boltzmann/matlab_codes/immersed/: desaturated_rainbow.m
lattice_boltzmann/matlab_codes/validation/: couette_parabolic2.m
lattice_boltzmann/test/: CMakeLists.txt  inotify.cpp  triangle.cpp
lattice_boltzmann/test/IO/: CMakeLists.txt  read_binary.cpp  test.bin.vtk
lattice_boltzmann/test/computeShader/: CMakeLists.txt  init3d.compute.glsl  main.cpp
lattice_boltzmann/test/imGUI/: imgui_demo.cpp
lattice_boltzmann/test/marchingCubes/: CMakeLists.txt  main.cpp  shader.geom.glsl
lattice_boltzmann/utility/: boundingbox.cpp  boundingbox.h  colormap.h  filesystemmonitor.cpp  gui_interface.h  inotify.cpp  inotify.h  isosurface.cpp  isosurface.h  shader.cpp  shader.h  slice.cpp
lattice_boltzmann/utility/glsl/: mc.frag  mc.geom.glsl  mc.vert
lattice_boltzmann_sims/: Allclean
lattice_boltzmann_sims/test/imGUI/: CMakeLists.txt
nonlinear_system/: CMakeLists.txt  Makefile  README.md  cmake_source_dir.h.in
nonlinear_system/core/kinetic_turbulence/: CMakeLists.txt  cartesian_field.h  dvec4_algorithms.cpp  dvec4_asyncio.cpp  dvec4_render.cpp  linux_utility.h  main.cpp  visual.m
nonlinear_system/core/kinetic_turbulence/algo/: double_gyre3d.glsl  ks.glsl
nonlinear_system/core/kinetic_turbulence/unary_operator/: dvec4_divide_by_const.glsl  dvec4_multiply_by_const.glsl
nonlinear_system_sims/: CMakeLists.txt  cmake_source_dir_dummy.h.in
particle_segregation/: CMakeLists.txt  readme.md
particle_segregation/includes/: ks3d_algorithm.hpp  param.h  sycl_integrator_adm4.hpp  sycl_integrator_rk45.hpp  sycl_integrator_rkf45.hpp  syclode45.hpp
particle_segregation/src/: guimain.cpp  guimain3d.cpp  main.cpp  openglwindow.cpp  openglwindow.h  pair_diffusion3d.cpp  syclode45.cpp  visual_ks3d.cpp
particle_segregation/tests/: fs.cpp  rk45.cpp  single_traj.cpp  single_traj3d.cpp
rans_model_in_basilisk/: README.md  makeThirdParty
unstructured/: init_script.m  mesh_remake_test_script.m  polymesh_remake_test_script.m  readme.md
(+229 files in other folders)
